--- a/package.json
+++ b/package.json
@@ -12,8 +12,15 @@
     "preshow:coverage": "npm run coverage",
     "show:coverage": "start http://localhost:3001/coverage/lcov-report",
     "preshow:dist": "npm run build",
-    "show:dist": "start http://localhost:3001/dist"
+    "show:dist": "start http://localhost:3001/dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist --repo https://github.com/AntistesEM/ahj-homeworks_sse-ws-frontend.git"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AntistesEM/ahj-homeworks_sse-ws-frontend.git"
+  },
+  "homepage": "http://AntistesEM.github.io/ahj-homeworks_sse-ws-frontend",
   "author": "Evgen",
   "license": "MIT",
   "devDependencies": {
@@ -28,6 +35,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "gh-pages": "^6.1.1",
     "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
@@ -40,7 +48,7 @@
   },
   "dependencies": {
     "@koa/cors": "^5.0.0",
-    "browser-sync": "^2.29.3",
+    "browser-sync": "^3.0.2",
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^24.0.0"
   }
