--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,8 +10,8 @@ cache: node_modules  # кеширование
 
 install:
   # - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild 20)
-  - npm install
-  - npm install -g push-dir
+  - npm install --legacy-peer-deps
+  # - npm install -g push-dir
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
