--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,4 @@
-image: Ubuntu2004  # образ для сборки, Ubuntu1804
+image: Ubuntu2204   # образ для сборки, Ubuntu1804
 
 stack: node 20  # окружение
 
@@ -10,7 +10,7 @@ cache: node_modules  # кеширование
 
 install:
   # - ps: Update-NodeJsInstallation (Get-NodeJsLatestBuild 20)
-  - npm install --legacy-peer-deps
+  - npm install
   # - npm install -g push-dir
 
 build: off  # отключаем встроенную в appveyor систему сборки
