--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -27,4 +27,5 @@ deploy_script:  # скрипт развёртывания
   - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
+  - npx gh-pages -d dist --repo https://github.com/AntistesEM/ahj-homeworks_sse-ws-frontend.git
+  # - npx push-dir --dir=dist --branch=gh-pages --force --verbose
